--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs"
+  },
 	"files": [
 		"src/index.ts",
 		"typings/main.d.ts"
-	]
+  ]
 }
