--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "karma-browserify": "^5.0.1",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.7",
+    "lodash": "^4.3.0",
     "tsify": "^0.13.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
